--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/AshIgnii/TrabalhoDesenvolvimentoII.git"
   },
-  "author": "Davi de Oliveira Caporal, Marcos Fernandes Daufenbach, João Victor Kafka, Vitor Hugo Rodrigues Gomes",
+  "author": "Davi de Oliveira Caporal, Marcos Fernandes Daufenbach, João Victor Kafcka, Vitor Hugo Rodrigues Gomes",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/AshIgnii/TrabalhoDesenvolvimentoII/issues"
