--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Implementar uma API \"Gestão de Ensino Especial\" e as funcionalidades aprendidas durante o curso!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "swagger": "node src/swagger.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,11 @@
   },
   "homepage": "https://github.com/AshIgnii/TrabalhoDesenvolvimentoII#readme",
   "dependencies": {
-    "express": "^5.0.0"
+    "body-parser": "^2.0.1",
+    "express": "^5.0.0",
+    "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "swagger-autogen": "^2.23.7"
   }
 }
